--- a/Index.css
+++ b/Index.css
@@ -1,8 +1,8 @@
 body {
     margin:0;
     padding: 0;
-    /*background-color: rgba(0, 123, 255, 0.42);*/
-    background-color: lightblue;
+    background-color: rgba(0, 123, 255, 0.42);
+   /*background-color: lightblue;*/
    }
 
 header {
